--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
-    padding: 10px;
-    margin: 100px;
-    color: rgb(199, 12, 105);
-    background-color: #a7e1f3;
+    padding: 20px;
+    margin: 0px;
+    color: deeppink;
+    background-color: white;
     text-align: center;
+}
+#container {
+    width: 70%;
+    padding: 1em;
+    border: 2px solid #DDD;
+    margin: 0 auto;
+}
+#container h1 {
+    font-size: 40px;
 }
